force-app/main/default/objects/NEPA_NAICS_Code__mdt/NEPA_NAICS_Code__mdt.object-meta.xml
<CustomObject>
  <label>NEPA NAICS Code</label>
  <pluralLabel>NEPA NAICS Codes</pluralLabel>
</CustomObject>