force-app/main/default/objects/NEPA_NAICS_Code__mdt/fields/Code__c.field-meta.xml
<CustomField>
  <fullName>Code__c</fullName>
  <label>Code</label>
  <type>Text</type>
  <length>20</length>
  <required>true</required>
</CustomField>