force-app/main/default/objects/NEPA_NAICS_Code__mdt/fields/Level__c.field-meta.xml
<CustomField>
  <fullName>Level__c</fullName>
  <label>Level</label>
  <type>Picklist</type>
  <required>true</required>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Sector</fullName>
      </value>
      <value>
        <fullName>SubSector</fullName>
      </value>
      <value>
        <fullName>IndustryGroup</fullName>
      </value>
      <value>
        <fullName>Industry</fullName>
      </value>
      <value>
        <fullName>NationalIndustry</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>