force-app/main/default/objects/NEPA_NAICS_Code__mdt/fields/Parent_Code__c.field-meta.xml
<CustomField>
  <fullName>Parent_Code__c</fullName>
  <label>Parent Code</label>
  <type>Text</type>
  <length>20</length>
</CustomField>