force-app/main/default/objects/NEPA_NAICS_Code__mdt/fields/Title__c.field-meta.xml
<CustomField>
  <fullName>Title__c</fullName>
  <label>Title</label>
  <type>Text</type>
  <length>255</length>
</CustomField>